--- a/package.json
+++ b/package.json
@@ -19,13 +19,12 @@
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
-    "@vue/eslint-config-airbnb": "^5.0.2",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^6.2.2",
-    "sass": "^1.26.5",
-    "sass-loader": "^8.0.2",
+    "stylus": "^0.54.8",
+    "stylus-loader": "3",
     "vue-cli-plugin-browser-extension": "latest",
     "vue-template-compiler": "^2.6.11"
   }
