--- a/src/manifest.json
+++ b/src/manifest.json
@@ -4,29 +4,26 @@
   "homepage_url": "http://localhost:8080/",
   "description": "A Vue Browser Extension",
   "default_locale": "en",
-  "permissions": [
-    "activeTab",
-    "<all_urls>",
-    "*://*/*"
-  ],
-  "icons": {
-    "16": "icons/16.png",
-    "48": "icons/48.png",
-    "128": "icons/128.png"
-  },
+  "permissions": ["activeTab", "declarativeContent", "storage"],
   "background": {
-    "scripts": [
-      "js/background.js"
-    ],
+    "scripts": ["js/background.js"],
     "persistent": false
   },
-  "browser_action": {
+  "page_action": {
     "default_popup": "popup.html",
     "default_title": "__MSG_extName__",
     "default_icon": {
-      "19": "icons/19.png",
-      "38": "icons/38.png"
+      "16": "icons/get_started16.png",
+      "32": "icons/get_started32.png",
+      "48": "icons/get_started48.png",
+      "128": "icons/get_started128.png"
     }
+  },
+  "icons": {
+    "16": "icons/get_started16.png",
+    "32": "icons/get_started32.png",
+    "48": "icons/get_started48.png",
+    "128": "icons/get_started128.png"
   },
   "options_ui": {
     "page": "options.html",
