--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^6.2.2",
-    "sass": "^1.26.5",
-    "sass-loader": "^8.0.2",
+    "stylus": "^0.54.8",
+    "stylus-loader": "^3.0.2",
     "vue-cli-plugin-browser-extension": "latest",
     "vue-template-compiler": "^2.6.11"
   }
