--- a/src/manifest.json
+++ b/src/manifest.json
@@ -4,7 +4,7 @@
   "homepage_url": "http://localhost:8080/",
   "description": "A Vue Browser Extension",
   "default_locale": "en",
-  "permissions": ["activeTab", "<all_urls>", "*://*/*"],
+  "permissions": ["activeTab", "tabs", "<all_urls>", "*://*/*"],
   "icons": {
     "16": "icons/16.png",
     "48": "icons/48.png",
@@ -15,11 +15,8 @@
     "persistent": false
   },
   "browser_action": {
-    "default_title": "__MSG_extName__",
-    "default_icon": {
-      "19": "icons/19.png",
-      "38": "icons/38.png"
-    }
+    "default_icon": "icons/19.png",
+    "title": "Favorites"
   },
   "options_ui": {
     "page": "options.html",
