--- a/src/manifest.json
+++ b/src/manifest.json
@@ -4,7 +4,7 @@
   "homepage_url": "http://localhost:8080/",
   "description": "A Vue Browser Extension",
   "default_locale": "en",
-  "permissions": ["activeTab", "tabs", "<all_urls>", "*://*/*"],
+  "permissions": ["activeTab", "tabs", "storage", "<all_urls>", "*://*/*"],
   "icons": {
     "16": "icons/16.png",
     "48": "icons/48.png",
