--- a/src/manifest.json
+++ b/src/manifest.json
@@ -4,6 +4,7 @@
   "homepage_url": "http://localhost:8080/",
   "description": "A Vue Browser Extension",
   "default_locale": "en",
+  "version": "1.0.0",
   "permissions": ["activeTab", "tabs", "storage", "<all_urls>", "*://*/*"],
   "icons": {
     "16": "icons/16.png",
@@ -21,5 +22,11 @@
   "options_ui": {
     "page": "options.html",
     "browser_style": true
-  }
+  },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["js/content-script.js"]
+    }
+  ]
 }
